--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-concat-css": "^2.2.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-uglify": "^1.4.0"
+  },
+  "dependencies": {
+    "backbone": "^1.2.3",
+    "firebase": "^2.2.9",
+    "jquery": "^2.1.4",
+    "underscore": "^1.8.3"
   }
 }
